# darkroom

./: .gitignore  AGENTS.md  AI_DENOISE.md  CLAUDE.md  CURRENT_STATE.md  Cargo.toml  HAND_OFF.md  MAREK_NOTES.md  README.md  SPEC_V1.md  TODO.md  index.html  package-lock.json  package.json  rust-toolchain.toml
.claude/plans/: act-as-senior-software-serialized-iverson-agent-a978d97b6eed4194b.md
.claude/skills/tauri-v2-ui-testing/: SKILL.md
.claude/skills/tauri-v2-ui-testing/assets/: example-darkroom-mock.ts  tauriMock.template.ts
.claude/skills/tauri-v2-ui-testing/assets/tier3-playwright-example/: README.md  fixtures.ts  playwright.config.ts
.claude/skills/tauri-v2-ui-testing/assets/tier3-playwright-example/tests/: real-backend.spec.ts
.claude/skills/tauri-v2-ui-testing/references/: building-the-mock.md  driving-with-playwright-cli.md  example-darkroom.md  full-app-e2e.md  native-macos.md
.claude/skills/tauri-v2-ui-testing/scripts/: tauri-dev-web.sh  tauri-discover-ipc.sh  tauri-native-shot.sh
.github/workflows/: ci.yml  release.yml
crates/core-analyze/: Cargo.toml  SPIKE.md
crates/core-analyze/assets/: presence_probe.json
crates/core-analyze/examples/: analyze_one.rs  animal_eval.rs  caption_one.rs  detect_eval.rs  detect_one.rs  faces_one.rs  models_smoke.rs  onnx_io.rs  presence_eval.rs  presence_tune.rs  train_presence.rs
crates/core-analyze/src/: caption.rs  coco.rs  detector.rs  error.rs  face.rs  face_aligner.rs  face_detector.rs  face_embedder.rs  lib.rs  megadetector.rs  metrics.rs  models.rs  preprocess.rs  presence.rs  verify.rs
crates/core-db/: Cargo.toml
crates/core-db/migrations/: 001_init.sql  002_keyword_unique.sql  003_scale.sql  004_phash.sql  005_analysis.sql  006_labels.sql  007_user_events.sql  008_presence.sql  009_integrity.sql  010_faces.sql  011_imported_index.sql  012_analysis_stage_index.sql  013_face_marker_reconcile.sql  014_similarity_features.sql  015_presets.sql  016_develop_snapshots.sql  017_image_format.sql
crates/core-db/src/: error.rs  lib.rs
crates/core-dedup/: Cargo.toml
crates/core-dedup/src/: error.rs  lib.rs
crates/core-dedup/tests/: grouping.rs
crates/core-import/: Cargo.toml
crates/core-import/src/: error.rs  lib.rs
crates/core-import/tests/: import_copy.rs
crates/core-library/: Cargo.toml
crates/core-library/examples/: export_training_data.rs  features_one.rs  scan_library.rs
crates/core-library/src/: analysis.rs  collections.rs  cull.rs  edits.rs  error.rs  events.rs  face.rs  face_cluster.rs  features.rs  index.rs  keywords.rs  lib.rs  maintenance.rs  presets.rs  query.rs  reconcile.rs  settings.rs  sidecar.rs  snapshots.rs  thumbs.rs
crates/core-library/tests/: analysis.rs  batch_cull.rs  collections.rs  events_features.rs  index_query.rs  keywords.rs  query_filters.rs
crates/core-pipeline/: Cargo.toml
crates/core-pipeline/examples/: bench_render.rs  cb_demo.rs  crop_demo.rs  export_full.rs  measure_midgrey.rs  render_one.rs
crates/core-pipeline/src/: backend.rs  base_curve_ref.rs  brush_bake.wgsl  curve.rs  develop.wgsl  encode.rs  error.rs  histogram.rs  lib.rs  mask.rs  mask_prepass.wgsl  mask_refine.wgsl  params.rs
crates/core-pipeline/tests/: hsl.rs  masks.rs  param_effects.rs  tone_curve.rs  viewport.rs
crates/core-preset/: Cargo.toml
crates/core-preset/src/: apply.rs  error.rs  formats.rs  ir.rs  lib.rs  map.rs  migrate.rs  registry.rs  report.rs  scope.rs
crates/core-preset/src/formats/: lr_template.rs  lr_xmp.rs
crates/core-preset/tests/: lr_import.rs  preset.rs  robustness.rs
crates/core-preset/tests/fixtures/: sample.lrtemplate  sample.xmp
crates/core-raw/: Cargo.toml
crates/core-raw/examples/: bench_decode.rs  decode_gate.rs  print_color_matrices.rs
crates/core-raw/src/: develop.rs  display.rs  error.rs  hash.rs  lib.rs  meta.rs  thumb.rs
crates/core-raw/tests/: decode_once.rs  library_sample.rs  preview_decode.rs
design/: edit-screen.html  library-screen.html
docs/: decode-gate-result.md
e2e/: VERIFICATION.md  fixtures.ts  helpers.ts  playwright.config.ts
e2e/tests/: act.spec.ts  real-backend.spec.ts
e2e/tests/verify/: 00-recon.spec.ts  01-library.spec.ts  02-culling.spec.ts  03-keywords.spec.ts  04-collections.spec.ts  05-develop.spec.ts  06-settings-ai.spec.ts  07-ui.spec.ts
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  e2e-capability.json  tauri.conf.json
src-tauri/resources/presets/: bw_contrast.json  cool_shadows.json  punchy.json  soft_matte.json  warm_golden.json
src-tauri/src/: analysis.rs  analysis_stub.rs  commands.rs  events.rs  faces.rs  faces_stub.rs  features.rs  lib.rs  logging.rs  main.rs  protocol.rs  state.rs  thumb_queue.rs  watch.rs
src/components/: CommandPalette.tsx  ErrorBoundary.tsx  Icon.tsx  Toast.tsx  TopBar.tsx
src/dev/: tauriMock.ts
src/hooks/: useCulling.ts  useEditSync.ts  useKeyboard.ts
src/lib/: canvasPaint.ts  export.ts  importFlow.ts  ipc.ts  logger.ts  maskGeom.ts  platform.ts  presetScope.ts  useAnalysis.ts  useFaces.ts  useLibrary.ts  useViewport.ts  viewport.ts
src/store/: app.ts  dedup.ts  develop.ts
src/views/Dedup/: BinDrawer.tsx  DedupView.tsx  Filmstrip.tsx  HeroStage.tsx  Overview.tsx  PreviewOverlay.tsx  Review.tsx  SignalsPanel.tsx  frameVisual.tsx  helpers.ts
src/views/Develop/: ColorBalance.tsx  ColorMixer.tsx  CreatePresetDialog.tsx  CropOverlay.tsx  DevelopSidePanel.tsx  DevelopView.tsx  Filmstrip.tsx  Histogram.tsx  HistoryPanel.tsx  ImportReportModal.tsx  InstrumentPanel.tsx  MaskOverlay.tsx  MaskPanel.tsx  Module.tsx  PresetsPanel.tsx  Slider.tsx  Stage.tsx  ToneCurve.tsx  useDevelop.ts  useHistory.ts  usePresets.ts
