[workspace]
resolver = "2"
members = [
    "src-tauri",
    "crates/core-raw",
    "crates/core-db",
    "crates/core-library",
    "crates/core-pipeline",
    "crates/core-dedup",
    "crates/core-import",
    "crates/core-analyze",
    "crates/core-preset",
]

[workspace.package]
edition = "2021"
version = "0.1.1"
license = "MIT"
authors = ["Andrej Vysny"]

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3
panic = "abort"

# Faster RAW decode / image work even in dev
[profile.dev.package."*"]
opt-level = 2
