[package]
name = "darkroom"
version = "0.1.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "darkroom_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
# Tier-3 E2E (real-backend UI automation via tauri-plugin-playwright socket bridge).
# Enables the optional plugin AND tauri's runtime-capability API so the playwright
# permission is granted at runtime (debug only) — never compiled into release builds.
e2e-testing = ["dep:tauri-plugin-playwright", "tauri/dynamic-acl"]

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-playwright = { version = "0.4", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zip = { version = "4", default-features = false, features = ["deflate"] }
core-db = { path = "../crates/core-db" }
core-raw = { path = "../crates/core-raw" }
core-library = { path = "../crates/core-library" }
core-pipeline = { path = "../crates/core-pipeline" }
core-dedup = { path = "../crates/core-dedup" }
core-import = { path = "../crates/core-import" }
core-preset = { path = "../crates/core-preset" }
image = "0.25"
rayon = "1"
notify = "8"

[target.'cfg(not(all(target_os = "macos", target_arch = "x86_64")))'.dependencies]
core-analyze = { path = "../crates/core-analyze" }
