[package]
name = "core-analyze"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
# ONNX Runtime bindings. CoreML EP (ANE/GPU) on Apple Silicon. Pinned exactly (no stable release yet).
# Default features (std, ndarray, download-binaries, copy-dylibs, tls-native, api-24) + coreml EP.
ort = { version = "=2.0.0-rc.12", features = ["coreml"] }
ndarray = "0.17"
image = "0.25"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
# BART tokenizer for Florence-2 caption decode.
tokenizers = { version = "0.22", default-features = false, features = ["onig"] }
# First-run model download (ureq is already in the tree via ort).
ureq = "3"
# Integrity verification of downloaded model files (pinned SHA-256 per file).
sha2 = "0.10"

[dev-dependencies]
anyhow = "1"
core-raw = { path = "../core-raw" }
