[package]
name = "core-analyze"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
# ONNX Runtime bindings. Pinned exactly (no stable release yet). Default features
# (std, ndarray, download-binaries, copy-dylibs, tls-native, api-24); the accelerated EP is
# selected per target below. download-binaries statically links onnxruntime on every platform
# (no dylib to ship). EP that can't register at runtime falls back to CPU automatically.
ort = { version = "=2.0.0-rc.12" }
ndarray = "0.17"
image = "0.25"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
# BART tokenizer for Florence-2 caption decode.
tokenizers = { version = "0.22", default-features = false, features = ["onig"] }
# First-run model download (ureq is already in the tree via ort).
ureq = "3"
# Integrity verification of downloaded model files (pinned SHA-256 per file).
sha2 = "0.10"
# Face alignment: 2D similarity (Umeyama) transform via SVD — pure Rust, no opencv.
nalgebra = "0.33"
# Affine warp of the aligned 112x112 face crop (image-0.25 compatible).
imageproc = "0.25"

# Accelerated execution providers, selected per platform (Cargo unions features for the same
# crate across these tables). CoreML (ANE/GPU) on Apple Silicon; DirectML (any DX12 GPU) on
# Windows — pyke's prebuilt Windows onnxruntime is already compiled with DirectML, so this only
# exposes the `ort::ep::DirectML` type (no extra redistributable). Linux/other -> CPU.
[target.'cfg(target_os = "macos")'.dependencies]
ort = { version = "=2.0.0-rc.12", features = ["coreml"] }

[target.'cfg(target_os = "windows")'.dependencies]
ort = { version = "=2.0.0-rc.12", features = ["directml"] }

[dev-dependencies]
anyhow = "1"
core-raw = { path = "../core-raw" }
# Label-driven eval/tuning harnesses read the catalog directly. core-db re-exports the shared rusqlite.
core-db = { path = "../core-db" }
core-library = { path = "../core-library" }
