[package]
name = "core-dedup"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
core-db = { path = "../core-db" }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
trash = "5"
# JPEG decode only — perceptual dHash is computed from the cached thumbnail JPEGs.
image = { version = "0.25", default-features = false, features = ["jpeg"] }
