[package]
name = "core-library"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
core-db = { path = "../core-db" }
core-raw = { path = "../core-raw" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
rayon = "1"
walkdir = "2"
