[package]
name = "core-raw"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
rawler = "=0.7.2"
image = "0.25"
blake3 = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["std"] }

[dev-dependencies]
anyhow = "1"
